# Coronary_Artery_Score

./: .gitignore  Excel使用指南.md  LICENSE  README.md  create_excel_template.py  create_single_template.py  excel_demo.py  excel_processor.py  pyproject.toml  requirements.txt  run_scoring_with_dialog.py  setup.py  single_sheet_processor.py  single_sheet_processor_v2.py  test_excel_scoring.py  一键评分.py  临床数据处理器.py  单表格式使用指南.md  处理我的Excel文件.py  智能转换使用指南.md  智能转换器.py  补充评分.py  项目整理说明.md
docs/: api_reference.md  user_guide.md
examples/: basic_usage.py
src/coronary_score/: __init__.py  cli.py  data_io.py
src/coronary_score/calculators/: __init__.py  cad_rads_calculator.py  gensini_calculator.py  syntax_calculator.py
src/coronary_score/models/: __init__.py  patient.py
src/coronary_score/utils/: __init__.py  validation.py  vessel_segments.py
tests/: conftest.py  test_cad_rads_calculator.py  test_integration.py  test_patient_model.py  test_syntax_calculator.py
